# emotion-swc-plugin

./: .gitignore  Cargo.toml  README.md  package.json  rust-toolchain
.github/workflows/: npm-publish.yml  publish.yml
emotion-swc-plugin/: Cargo.toml
emotion-swc-plugin/src/: lib.rs
exampes/with-cra-craco/: craco.config.js  package.json
exampes/with-cra-craco/src/: App.js  Global.js  index.js
exampes/with-node/: .gitignore  Component.js  package.json  transform.js
src/: lib.rs
src/emotion_next/: mod.rs
src/emotion_next/tests/: fixture.rs
test/: jest.config.js  package.json
test/css/label-object/no-macro/: input.js
test/specs/css/no-macro/: impure.js  label-function-expression.js  label-transpiled-by-ts-with-interpolations.js  label-transpiled-by-ts.js
test/specs/styled/macro/: label.js
test/styled/: styled.test.js
test/styled/basic/no-macro/: output.js  test.js
test/test-utils/: transform.js
