[package]
name = "emotion-swc-plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = "1"
serde_json = "1.0.79"
swc_plugin = "*"
base64 = "0.13"
byteorder = "1"
fxhash = "0.2.1"
once_cell = "1.8.0"
radix_fmt = "1"
regex = "1.5"
sourcemap = "6.0.1"
swc_atoms = "0.2.11"
swc_common = { version = "0.18.7", features = ["concurrent", "sourcemap"] }
swc_ecmascript = { version = "0.165.0", features = ["codegen", "minifier", "optimization", "parser", "react", "transforms", "typescript", "utils", "visit"] }
swc_trace_macro = "0.1.1"
tracing = { version = "0.1.32", features = ["release_max_level_info"] }

[dev-dependencies]
swc_ecma_transforms_testing = "0.91.0"
testing = "0.20.0"